@@ -1,9 +1,8 @@
 /*
- * #%L
- * ACS AEM Commons Bundle
- * %%
- * Copyright (C) 2017 Adobe
- * %%
+ * ACS AEM Commons
+ *
+ * Copyright (C) 2013 - 2023 Adobe
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -15,12 +14,13 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * #L%
  */
 package com.adobe.acs.commons.mcp.util;
 
-import com.adobe.acs.commons.mcp.form.FieldComponent;
-import com.adobe.acs.commons.mcp.form.FormField;
+import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.getCollectionComponentType;
+import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.hasMultipleValues;
+import static com.adobe.acs.commons.mcp.util.ValueMapSerializer.serializeToStringArray;
+
 import java.io.IOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AccessibleObject;
@@ -30,24 +30,27 @@ import java.text.NumberFormat;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import com.adobe.acs.commons.mcp.McpLocalizationService;
+import com.adobe.acs.commons.mcp.form.FieldComponent;
+import com.adobe.acs.commons.mcp.form.FormField;
+
+import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.reflect.FieldUtils;
 import org.apache.commons.lang3.reflect.MethodUtils;
 import org.apache.sling.api.request.RequestParameter;
+import org.apache.sling.api.resource.Resource;
 import org.apache.sling.api.resource.ValueMap;
 import org.apache.sling.api.scripting.SlingScriptHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.getCollectionComponentType;
-import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.hasMultipleValues;
-import static com.adobe.acs.commons.mcp.util.ValueMapSerializer.serializeToStringArray;
 
 /**
  * Processing routines for handing ProcessInput within a FormProcessor
@@ -129,7 +132,7 @@ public class AnnotatedFieldDeserializer {
             }
             FieldUtils.writeField(field, target, array, true);
         } else {
-            Collection c = (Collection) getInstantiatableListType(field.getType()).newInstance();
+            Collection c = (Collection) getInstantiatableListType(field.getType()).getDeclaredConstructor().newInstance();
             c.addAll(convertedValues);
             FieldUtils.writeField(field, target, c, true);
         }
@@ -196,19 +199,85 @@ public class AnnotatedFieldDeserializer {
     }
 
     public static Map<String, FieldComponent> getFormFields(Class source, SlingScriptHelper sling) {
-        return getAllAnnotatedObjectMembers(source, FormField.class)
-                .collect(Collectors.toMap(AccessibleObjectUtil::getFieldName, f -> {
+        final Map<String, FieldComponent> comps = new LinkedHashMap<>();
+        Map<String, String> overlayedLangs = loadOverlayedLanguages(sling);
+        getAllAnnotatedObjectMembers(source, FormField.class)
+            .forEach(
+                f -> {
                     FormField fieldDefinition = f.getAnnotation(FormField.class);
-                    FieldComponent component;
-                    try {
-                        component = fieldDefinition.component().newInstance();
-                        component.setup(AccessibleObjectUtil.getFieldName(f), f, fieldDefinition, sling);
-                        return component;
-                    } catch (InstantiationException | IllegalAccessException ex) {
-                        LOG.error("Unable to instantiate field component for " + f.toString(), ex);
+                    if (fieldDefinition.localize() && MapUtils.isNotEmpty(overlayedLangs)) {
+                        comps.putAll(createLocalizedComponent(sling, f, fieldDefinition, overlayedLangs));
+                    } else {
+                        try {
+                            FieldComponent component = fieldDefinition.component().getDeclaredConstructor().newInstance();
+                            component.setup(AccessibleObjectUtil.getFieldName(f), f, fieldDefinition, sling);
+                            comps.put(AccessibleObjectUtil.getFieldName(f), component);
+                        } catch (RuntimeException | ReflectiveOperationException ex) {
+                            LOG.error("Unable to instantiate field component for " + f.toString(), ex);
+                        }
                     }
-                    return null;
-                }, (a, b) -> a, LinkedHashMap::new));
+                }
+        );
+        return comps;
+    }
+
+    private static Map<String, String> loadOverlayedLanguages(SlingScriptHelper sling) {
+        Map<String, String> overlayedLangs = new LinkedHashMap<>();
+        
+        if (sling != null) {
+            String overlayedLanguagesResourcePath = getOverlayedLanguagesResourcePath(sling);
+
+            // Read overlayed languages list
+            Resource rootRes = sling.getRequest().getResourceResolver().getResource(overlayedLanguagesResourcePath);
+            if (rootRes != null) {
+                Iterator<Resource> itr = rootRes.listChildren();
+                while (itr.hasNext()) {
+                    Resource langRes = itr.next();
+                    String language = langRes.getValueMap().get("language", "");
+                    String country = langRes.getValueMap().get("country", "");
+                    if (!country.isEmpty() && !country.equals("*")) {
+                        language = language + " - " + country;
+                    }
+                    overlayedLangs.put(langRes.getName(), language);
+                }
+            }
+        }
+
+        return overlayedLangs;
+    }
+
+    private static String getOverlayedLanguagesResourcePath(SlingScriptHelper sling) {
+        String overlayedLanguagesResourcePath = null;
+
+        McpLocalizationService mcpLocalizationService = sling.getService(McpLocalizationService.class);
+        if(mcpLocalizationService != null && mcpLocalizationService.isLocalizationEnabled()) {
+            overlayedLanguagesResourcePath = mcpLocalizationService.getOverlayedLanguagesResourcePath();
+        }
+        return overlayedLanguagesResourcePath;
+    }
+
+
+    private static Map<String, FieldComponent> createLocalizedComponent(SlingScriptHelper sling, AccessibleObject accessibleObject, FormField fieldDefinition, Map<String, String> overlayedLangs) {
+        Map<String, FieldComponent> comps = new LinkedHashMap<>();
+        String[] langs = fieldDefinition.languages();
+        if (langs == null || langs.length < 2) {
+            langs = overlayedLangs.keySet().toArray(new String[1]);
+        }
+        for (String lang : langs) {
+            String fieldName = AccessibleObjectUtil.getFieldName(accessibleObject)
+                            + (lang.equalsIgnoreCase("en") ? "" : "." + lang);
+            String title = fieldDefinition.name()
+                            + (lang.equalsIgnoreCase("en") ? "" : " (" + overlayedLangs.get(lang) + ")");
+            try {
+                FieldComponent component = fieldDefinition.component().getDeclaredConstructor().newInstance();
+                component.setup(fieldName, accessibleObject, fieldDefinition, sling);
+                component.getProperties().put("fieldLabel", title);
+                comps.put(fieldName, component);
+            } catch (RuntimeException | ReflectiveOperationException ex) {
+                LOG.error("Unable to instantiate field component for " + accessibleObject.toString(), ex);
+            }
+        }
+        return comps;
     }
 
     private static int superclassFieldsFirst(Field a, Field b) {
