@@ -1,9 +1,8 @@
 /*
- * #%L
- * ACS AEM Commons Bundle
- * %%
- * Copyright (C) 2018 Adobe
- * %%
+ * ACS AEM Commons
+ *
+ * Copyright (C) 2013 - 2023 Adobe
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -15,7 +14,6 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * #L%
  */
 package com.adobe.acs.commons.util.impl;
 
@@ -191,11 +189,11 @@ public class ReflectionUtil {
 
             switch (type){
                 case "Long":
-                    return new Long(value);
+                    return Long.valueOf(value);
                 case "Integer":
-                    return new Integer(value);
+                    return Integer.valueOf(value);
                 case "Float":
-                    return new Float(value);
+                    return Float.valueOf(value);
                 case "Boolean":
                     if(value.equalsIgnoreCase("true")){
                         return Boolean.TRUE;
@@ -203,7 +201,7 @@ public class ReflectionUtil {
                         return Boolean.FALSE;
                     }
                 case "Double":
-                    return new Double(value);
+                    return Double.valueOf(value);
                 case "String":
                 default:
                     return allowedValue;
