@@ -1,21 +1,19 @@
 /*
- * #%L
- * ACS AEM Commons Bundle
- * %%
- * Copyright (C) 2013 Adobe
- * %%
+ * ACS AEM Commons
+ *
+ * Copyright (C) 2013 - 2023 Adobe
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * #L%
  */
 
 package com.adobe.acs.commons.analysis.jcrchecksum.impl;
@@ -30,7 +28,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 import javax.jcr.Node;
 import javax.jcr.RepositoryException;
@@ -377,8 +375,8 @@ public class ChecksumGeneratorImplTest {
         final Node node = session.getRootNode().addNode("page/jcr:content");
         node.setProperty("jcr:title", "My Title");
         node.setProperty("jcr:description", "This is my test node");
-        node.setProperty("long", new Long(100));
-        node.setProperty("double", new Double(99.99));
+        node.setProperty("long", Long.valueOf(100));
+        node.setProperty("double", Double.valueOf(99.99));
         node.setProperty("boolean", true);
         session.save();
 
@@ -460,8 +458,8 @@ public class ChecksumGeneratorImplTest {
         Node node = session.getRootNode().addNode("page/jcr:content");
         node.setProperty("jcr:title", "My Title");
         node.setProperty("jcr:description", "This is my test node");
-        node.setProperty("long", new Long(100));
-        node.setProperty("double", new Double(99.99));
+        node.setProperty("long", Long.valueOf(100));
+        node.setProperty("double", Double.valueOf(99.99));
         node.setProperty("boolean", true);
         node.setProperty("unsorted", new String[]{ "woof", "bark", "howl" });
         node.setProperty("sorted", new String[]{ "yelp", "arf" });
@@ -497,8 +495,8 @@ public class ChecksumGeneratorImplTest {
         Node node = session.getRootNode().addNode("page/jcr:content");
         node.setProperty("jcr:title", "My Title");
         node.setProperty("jcr:description", "This is my test node");
-        node.setProperty("long", new Long(100));
-        node.setProperty("double", new Double(99.99));
+        node.setProperty("long", Long.valueOf(100));
+        node.setProperty("double", Double.valueOf(99.99));
         node.setProperty("boolean", true);
         node.setProperty("unsorted", new String[]{ "woof", "bark", "howl" });
         node.setProperty("sorted", new String[]{ "yelp", "arf" });
