@@ -1,9 +1,8 @@
 /*
- * #%L
- * ACS AEM Commons Bundle
- * %%
- * Copyright (C) 2017 Adobe
- * %%
+ * ACS AEM Commons
+ *
+ * Copyright (C) 2013 - 2023 Adobe
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -15,7 +14,6 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * #L%
  */
 package com.adobe.acs.commons.mcp.util;
 
@@ -37,7 +35,7 @@ public class ValueMapSerializerTest {
      */
     @Test
     public void testSerializeToStringArray() {
-        Object value = Arrays.asList("one", "two", "three", 4, 5.0D, 6L, new Integer(7), new Long(8));
+        Object value = Arrays.asList("one", "two", "three", 4, 5.0D, 6L, Integer.valueOf(7), Long.valueOf(8));
         String[] expResult = new String[]{"one", "two", "three", "4", "5.0", "6", "7", "8"};
         String[] result = ValueMapSerializer.serializeToStringArray(value);
         assertArrayEquals(expResult, result);
