@@ -1,9 +1,8 @@
 /*
- * #%L
- * ACS AEM Commons Bundle
- * %%
- * Copyright (C) 2019 Adobe
- * %%
+ * ACS AEM Commons
+ *
+ * Copyright (C) 2013 - 2023 Adobe
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -15,49 +14,9 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * #L%
  */
 package com.adobe.acs.commons.remoteassets.impl;
 
-import com.adobe.acs.commons.assets.FileExtensionMimeTypeConstants;
-import com.adobe.acs.commons.testutil.LogTester;
-import com.day.cq.commons.jcr.JcrConstants;
-import com.day.cq.dam.api.Asset;
-import com.day.cq.dam.api.DamConstants;
-import com.day.cq.dam.api.Rendition;
-import com.day.cq.tagging.TagConstants;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import io.wcm.testing.mock.aem.junit.AemContext;
-import org.apache.sling.api.resource.Resource;
-import org.apache.sling.api.resource.ResourceResolver;
-import org.apache.sling.testing.mock.sling.ResourceResolverType;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.mockito.invocation.Invocation;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
-import org.mockserver.client.MockServerClient;
-import org.mockserver.junit.MockServerRule;
-import org.mockserver.model.HttpRequest;
-import org.mockserver.model.HttpResponse;
-
-import javax.jcr.Node;
-import javax.jcr.Session;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.math.BigDecimal;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.GregorianCalendar;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.TimeZone;
 
 import static com.adobe.acs.commons.remoteassets.impl.RemoteAssetsTestUtil.TEST_DAM_PATH_A;
 import static com.adobe.acs.commons.remoteassets.impl.RemoteAssetsTestUtil.TEST_DAM_PATH_B;
@@ -70,28 +29,61 @@ import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyString;
-import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.mock;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.when;
 import static org.mockserver.model.HttpRequest.request;
 import static org.mockserver.model.HttpResponse.response;
 
+import java.io.IOException;
+import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Calendar;
+import java.util.GregorianCalendar;
+import java.util.List;
+import java.util.Map;
+import java.util.TimeZone;
+
+import javax.jcr.Node;
+import javax.jcr.RepositoryException;
+import javax.jcr.Session;
+import javax.jcr.nodetype.NodeType;
+import javax.servlet.http.HttpServletResponse;
+
+import org.apache.sling.api.resource.Resource;
+import org.apache.sling.api.resource.ResourceResolver;
+import org.apache.sling.testing.mock.sling.ResourceResolverType;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
+import org.mockserver.client.MockServerClient;
+import org.mockserver.junit.MockServerRule;
+import org.mockserver.model.HttpRequest;
+import org.mockserver.model.HttpResponse;
+
+import com.adobe.acs.commons.assets.FileExtensionMimeTypeConstants;
+import com.adobe.acs.commons.testutil.LogTester;
+import com.adobe.acs.commons.util.RequireAem;
+import com.day.cq.commons.jcr.JcrConstants;
+import com.day.cq.dam.api.Asset;
+import com.day.cq.dam.api.DamConstants;
+import com.day.cq.dam.api.Rendition;
+import com.day.cq.tagging.TagConstants;
+
+import io.wcm.testing.mock.aem.junit.AemContext;
+
 public class RemoteAssetsNodeSyncImplTest {
     @Rule
-    public final AemContext context = new AemContext(ResourceResolverType.JCR_MOCK);
+    public final AemContext context = new AemContext(ResourceResolverType.JCR_OAK);
 
     @Rule
     public MockServerRule mockServerRule = new MockServerRule(this);
     private MockServerClient mockServerClient;
 
-    private RemoteAssetsConfigImpl remoteAssetsConfig;
+//    private RemoteAssetsConfig remoteAssetsConfig;
+
     private RemoteAssetsNodeSyncImpl remoteAssetsNodeSync;
-    private Map<String, List<String>> nodeMixinsTracker;
+//    private Map<String, List<String>> nodeMixinsTracker;
 
     @Before
     public void setup() throws Exception {
@@ -106,44 +98,21 @@ public class RemoteAssetsNodeSyncImplTest {
         remoteAssetsConfigs.put("server.url", "http://localhost:" + mockServerRule.getPort());
         remoteAssetsConfigs.put("server.insecure", true);
         remoteAssetsConfigs.put("save.interval", 2);
+        
+        // does not work with a mock here
+        RequireAem requireAem = new RequireAem() {
+          
+          @Override
+          public Distribution getDistribution() {
+            return null;
+          }
+        };
 
+        context.registerService(RequireAem.class,requireAem,"distribution","classic");
         context.registerInjectActivateService(new RemoteAssetsConfigImpl(), remoteAssetsConfigs);
+
         RemoteAssetsNodeSyncImpl remoteAssetsNodeSyncImpl = spy(new RemoteAssetsNodeSyncImpl());
         remoteAssetsNodeSync = context.registerInjectActivateService(remoteAssetsNodeSyncImpl);
-
-        nodeMixinsTracker = new HashMap<>();
-        // This hackery is in place because MockNode#addMixin throws an UnsupportedOperationException
-        doAnswer(new Answer<Object>() {
-            @Override
-            public Object answer(InvocationOnMock invocationOnMock) throws Throwable {
-                // Need to cast this to Invocation so that we can get at the raw arguments
-                // to modify them prior to delegating the call to callRealMethod().
-                Invocation invocation = (Invocation) invocationOnMock;
-
-                Resource argResource = (Resource) invocation.getRawArguments()[2];
-                Resource mockResource = mock(Resource.class);
-                when(mockResource.getPath()).thenReturn(argResource.getPath());
-
-                Node mockResourceNode = mock(Node.class);
-                doNothing().when(mockResourceNode).addMixin(anyString());
-                doReturn(mockResourceNode).when(mockResource).adaptTo(Node.class);
-
-                invocation.getRawArguments()[2] = mockResource;
-                invocation.callRealMethod();
-
-                JsonArray argMixins = (JsonArray) invocation.getRawArguments()[0];
-                Iterator<JsonElement> mixinIter = argMixins.iterator();
-                while (mixinIter.hasNext()) {
-                    List<String> nodeMixins = nodeMixinsTracker.get(argResource.getPath());
-                    if (nodeMixins == null) {
-                        nodeMixins = new ArrayList<>();
-                        nodeMixinsTracker.put(argResource.getPath(), nodeMixins);
-                    }
-                    nodeMixins.add(mixinIter.next().getAsString());
-                }
-                return null;
-            }
-        }).when(remoteAssetsNodeSyncImpl).setNodeMixinsProperty(any(JsonArray.class), any(String.class), any(Resource.class));
 
         LogTester.reset();
     }
@@ -209,7 +178,7 @@ public class RemoteAssetsNodeSyncImplTest {
     }
 
     @Test
-    public void testSync() throws IOException {
+    public void testSync() throws IOException, RepositoryException {
         setupMockSyncRequests();
 
         remoteAssetsNodeSync.syncAssetNodes();
@@ -258,14 +227,14 @@ public class RemoteAssetsNodeSyncImplTest {
         Calendar testDate = new GregorianCalendar(2019, 0, 6, 18, 15, 24);
         testDate.setTimeZone(TimeZone.getTimeZone("GMT-06:00"));
         assertEquals(testDate.getTimeInMillis(), ((Calendar) tagA1a.getValueMap().get("testDate")).getTimeInMillis());
-        assertEquals(new BigDecimal("453.3218937128937"), tagA1a.getValueMap().get("testDecimal"));
-        assertEquals(new Long(4223), tagA1a.getValueMap().get("testLong"));
+        assertEquals(BigDecimal.valueOf(453.3218937128937), tagA1a.getValueMap().get("testDecimal"));
+        assertEquals(Long.valueOf(4223), tagA1a.getValueMap().get("testLong"));
         assertEquals(Arrays.asList("Hello", "World"), Arrays.asList((String[]) tagA1a.getValueMap().get("testArrayString")));
         assertEquals(Arrays.asList(Boolean.FALSE, Boolean.TRUE, Boolean.FALSE),
                 Arrays.asList((Boolean[]) tagA1a.getValueMap().get("testArrayBool")));
-        assertEquals(Arrays.asList(new BigDecimal("1.1"), new BigDecimal("28"), new BigDecimal("4.8972834")),
+        assertEquals(Arrays.asList(BigDecimal.valueOf(1.1), BigDecimal.valueOf(28), BigDecimal.valueOf(4.8972834)),
                 Arrays.asList((BigDecimal[]) tagA1a.getValueMap().get("testArrayDecimal")));
-        assertEquals(Arrays.asList(new Long(53), new Long(4), new Long(55425546)),
+        assertEquals(Arrays.asList(Long.valueOf(53), Long.valueOf(4), Long.valueOf(55425546)),
                 Arrays.asList((Long[]) tagA1a.getValueMap().get("testArrayLong")));
         assertNull(tagA1a.getValueMap().get(":testBinary"));
         assertNull(tagA1a.getValueMap().get("testArrayDecimalBadData"));
@@ -281,7 +250,7 @@ public class RemoteAssetsNodeSyncImplTest {
         assertEquals("Test Tag #B1", tagB1.getValueMap().get(JcrConstants.JCR_DESCRIPTION));
     }
 
-    private void validateSyncAssets() throws IOException {
+    private void validateSyncAssets() throws IOException, RepositoryException {
         ResourceResolver resourceResolver = context.resourceResolver();
 
         Resource assetFolderA = resourceResolver.getResource(TEST_DAM_PATH_A);
@@ -292,20 +261,14 @@ public class RemoteAssetsNodeSyncImplTest {
 
         Resource asset1Resource = resourceResolver.getResource(TEST_DAM_PATH_A + "/image_a1.jpg");
         assertEquals(DamConstants.NT_DAM_ASSET, asset1Resource.getValueMap().get(JcrConstants.JCR_PRIMARYTYPE));
-        assertEquals(Arrays.asList(JcrConstants.MIX_REFERENCEABLE, JcrConstants.MIX_VERSIONABLE), nodeMixinsTracker.get(asset1Resource.getPath()));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_CREATED));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_CREATED_BY));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_VERSIONHISTORY));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_BASEVERSION));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_ISCHECKEDOUT));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_UUID));
-        assertNull(asset1Resource.getValueMap().get(JcrConstants.JCR_PREDECESSORS));
+        assertTrue(hasMixin(asset1Resource,JcrConstants.MIX_REFERENCEABLE));
+        assertTrue(hasMixin(asset1Resource,JcrConstants.MIX_VERSIONABLE));
 
         Resource asset1ContentResource = asset1Resource.getChild(JcrConstants.JCR_CONTENT);
         assertEquals(DamConstants.NT_DAM_ASSETCONTENT, asset1ContentResource.getValueMap().get(JcrConstants.JCR_PRIMARYTYPE));
 
         Resource asset1MetadataResource = asset1ContentResource.getChild(DamConstants.METADATA_FOLDER);
-        assertEquals(Arrays.asList(TagConstants.NT_TAGGABLE), nodeMixinsTracker.get(asset1MetadataResource.getPath()));
+        assertTrue(hasMixin(asset1MetadataResource,TagConstants.NT_TAGGABLE));
 
         Asset asset1 = asset1Resource.adaptTo(Asset.class);
         assertEquals(FileExtensionMimeTypeConstants.EXT_JPEG_JPG, asset1.getMetadata("dam:MIMEtype"));
@@ -458,5 +421,15 @@ public class RemoteAssetsNodeSyncImplTest {
         Resource altRenditionContent = resourceResolver.getResource(nodeRenditionAltContent.getPath());
         byte[] altRenditionPlaceholder = getBytes(remoteAssetsNodeSync.getRemoteAssetPlaceholder(altRenditionContent));
         assertEquals(expectedPlaceholder.length, altRenditionPlaceholder.length);
+        
+        // Cleanup
+        nodeAsset.remove();
+        session.save();
     }
+    
+    private boolean hasMixin(Resource resource, String mixin) throws RepositoryException {
+        List<NodeType> nodetypes = Arrays.asList(resource.adaptTo(Node.class).getMixinNodeTypes());
+        return nodetypes.stream().anyMatch(nt -> nt.getName().equals(mixin));
+    }
+    
 }
